syntax = "proto3";
package sync;

option go_package = "./proto";

message InitRequest {
  bool bootstrap = 1;
  bytes log_private_key = 2;
  bytes node_private_key = 3;
  string data_dir = 4;
}

message InitResponse {
  bytes log_key = 1;
}

message UpdateRequest {
  FileMeta data = 1;
}

message UpdateResponse {
}

message FileMeta {
  bytes hash = 1;
  bytes multihash = 2;
  bytes proof = 3;
  string protocol = 4;
  EncryptionKey key = 5;
  uint64 size = 6;
  repeated SlabSlice slabs = 7;
  repeated string aliases = 8;
}

message EncryptionKey {
  bytes entropy = 1;
}

message SlabSlice {
  Slab slab = 1;
  uint32 offset = 2;
  uint32 length = 3;
}

message Slab {
  double health = 1;
  EncryptionKey key = 2;
  uint32 min_shards = 3;
  repeated Sector shards = 4;
}

message Sector {
  map<string, FileContracts> contract_set = 1;
  bytes latest_host = 2;
  bytes root = 3;
}

message PublicKey {
  bytes key = 1;
}

message FileContracts {
  repeated FileContractID contracts = 1;
}

message FileContractID {
  bytes id = 1;
}

message QueryRequest {
  repeated string keys = 1;
}

message QueryResponse {
  repeated FileMeta data = 1;
}

message UpdateNodesRequest {
  repeated bytes nodes = 1;
}

message UpdateNodesResponse {
}

message RemoveNodeRequest {
  bytes node = 1;
}

message RemoveNodeResponse {
}

service Sync {
  rpc Init(InitRequest) returns (InitResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
  rpc UpdateNodes(UpdateNodesRequest) returns (UpdateNodesResponse) {}
  rpc RemoveNode(RemoveNodeRequest) returns (RemoveNodeResponse) {}
}
